2005-01-22 Daniel Winkler <post AT danielwinkler.de>

	* src/pic16/pcoderegs.c (pCodeOptime2pCodes): reenabled optimization
	* (OptimizeRegUsage): make sure that there is really no other flow where
	  the first pCode is used

2005-01-22 Raphael Neider <rneider AT web.de>

	* src/pic16/pcoderegs.c (pCodeOptime2pCodes): disabled optimization
	  to fix #1106967 (pCode->seq are not set up correctly)

2004-01-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCglue.c (glue): make sure code area is declared before the
	static initialization area.

2005-01-21 Raphael Neider <rneider AT web.de>

	* device/lib/Makefile.in: fixed test for pic16 install dir
	* device/lib/pic16/*/Makefile*: modified compile flags to enable
	  optimizations
	* doc/sdccman.lyx: updated banksel optimization, removed --flr-support and
	  added --optimize-goto compiler switch and pragma wparam documentation
	* src/pic16/pcode.c (pic16_OptimizeBanksel): removed statistics dump
	* src/pic16/pcodepeep.c (pic16_pCodeOpCopy): fixed copying of WREG, PRODL
	  and PRODH closing bug #1071770 (peephole optimizer)

2005-01-19 Raphael Neider <rneider AT web.de>

	* src/SDCCglobl.h: ensure that PATH_MAX >= 2048 to guarantee
	  cmdLine buffers (used when calling sdcpp...) are large enough
	  (MAX_PATH=256 truncates arguments leading to system halts when
	  used in MinGW...)
	* src/pic16/gen.c (pic16_sameRegs): relaxed size criterion
	* (genUminus): rewritten to for efficiency
	* (genNearPointer[GS]et): enforce reloading of FSR0 (was still
	  used uninitialized in some cases)
	* (genCast): upcasting a 16bit int to a 24bit GPOINTER may not
	  copy the third byte from the int -- now assumes 0x80 (data memory)
	* src/pic16/genarith.c (pic16_genPlus): fixed bug when swapping
	  operands (genAddLit expects the iCode's operands to swapped as
	  well), fixed leftover bytes (crashed for short left operands)
	* (pic16_genMinusDec): performance improvements, removed false
	  PIC14 emitSKPNCs